- fixed features section card spacing

--- a/src/css/features.section.css
+++ b/src/css/features.section.css
@@ -1,41 +1,44 @@
 .gold-text {
   color: #9F6D36;
+  margin: 0;
 }
 
-/* Ensure the parent container of the grid takes up full width */
 .features-section {
+  display: flex; 
+  flex-direction: column;
   width: 100%;
-  box-sizing: border-box;
+  padding: 0 0;
   margin: 0 auto;
-  padding-bottom: 40px;
   margin-bottom: 20px;
   border-bottom: 1px solid #ddd;
 }
 
-/* Grid container to handle the layout */
-.features-grid {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  margin: 0;
-  padding: 0;
-  justify-items: center;
-  justify-content: center;
+.features-title {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 20px;
 }
 
-/* Card styling */
-.feature-card {
+.features-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  max-width: 1200px; /* Adjust this value as needed */
+}
+
+
+.card-grid {
   display: grid;
   grid-template-columns: 1fr, 2fr;
   grid-template-rows: auto auto;
   background: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  width: 100%;
-  max-width: 300px;
+  border-radius: 4px;
+  width: 340px;
   height: 120px;
   align-items: start;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .card-icon {
@@ -67,10 +70,27 @@
   color: #555;
 }
 
-/* Responsive layout for larger screens */
-@media (min-width: 768px) {
+/* Media Query for Mobile Device */
+
+@media (max-width: 768px) {
+  .features-section {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .features-title {
+    margin-bottom: 20px;
+  }
+
   .features-grid {
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     gap: 20px;
+  }
+
+  .card-grid {
+    margin: 0 auto;
   }
 }
